<resources>

    <string name="default_text">_text</string>

    <string name="app_name">爱宝</string>
    <string name="list_empty">不用看了. 什么都没有</string>
    <string name="press_more_times_for_exit">再按一次退出客户端</string>
    <string name="username">手机</string>
    <string name="password">密码</string>
    <string name="hint_username">请输入手机号码</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_verification">请输入验证码</string>
    <string name="login">登录</string>
    <string name="cancle_reservation">取消预约</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="get_verification">获取验证码</string>
    <string name="reget_verification">重新获取</string>
    <string name="register_ing">正在注册</string>
    <string name="loading">正在加载中</string>
    <string name="logining">正在登录</string>
    <string name="menu_dynamic">动态</string>
    <string name="menu_follow">关注宝宝</string>
    <string name="menu_kindle">Kindle</string>
    <string name="menu_user">帐号管理</string>
    <string name="new_follow">新的关注</string>
    <string name="follow_me_user">我关注的人</string>
    <string name="hint_name">昵称</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_birthday">生日</string>
    <string name="hint_gender">性别</string>
    <string name="hint_integral">积分</string>
    <string name="cancel">取消</string>
    <string name="follow_add">添加</string>
    <string name="follow_new">新的关注</string>
    <string name="hint_messge">验证消息</string>
    <string name="accept">接受</string>
    <string name="already_attention">已关注</string>
    <string name="already_pull">已发送</string>
    <string name="exit">切换帐号</string>
    <string name="update">检查更新</string>
    <string name="about">关于                     www.tengbin.me</string>
    <string name="evaluate">正在评价</string>
    <string name="hint_addfollow">说些什么吧.</string>
    <string name="hint_seach">请输入手机号码.</string>
    <string name="seach_aibao">搜索爱宝：</string>
    <string name="seach_maibao">搜索麦宝：</string>
    <string name="error_hint_phone">请输入正确的手机号码</string>
    <string name="hint_add">正在添加中</string>
    <string name="cancel_attention">取消关注</string>
    <string name="accepat_ing">正在同意</string>
    <string name="cancel_ing">正在取消</string>
    <string name="remark">备注</string>
    <string name="remark_no">不能设置空白的备注哦</string>
    <string name="update_remark">正在修改备注</string>
    <string name="setting_remark">设置备注</string>
    <string name="setting_name">设置昵称</string>
    <string name="no_name">昵称不能为空</string>
    <string name="no_time">时间不能为 0 哦</string>
    <string name="habit_executive">执行习惯</string>
    <string name="change_ok">确定修改</string>
    <string name="change_password">修改密码</string>
    <string name="exit_account">退出帐号</string>
    <string name="ok">确定</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="setting_sys">设置</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="user_agreement">我已阅读并同意《用户使用协议》</string>
    <string name="save">保存</string>
    <string name="agreement">爱的约定</string>
    <string name="habit">习惯养成</string>
    <string name="user_info">个人信息</string>
    <string name="head">头像</string>
    <string name="state_offline">当前用户未在线</string>
    <string name="state_agreementing">当前用户已在约定中</string>
    <string name="agreementing">约定中</string>
    <string name="offline">离线</string>
    <string name="online">在线</string>
    <string name="offline_brackets">   [离线]</string>
    <string name="online_brackets">   [在线]</string>
    <string name="photograph">拍照</string>
    <string name="being_from_album">从相册获取</string>
    <string name="and_agreement">与%s约定中</string>
    <string name="success_record">记录成功</string>
    <string name="failure_head_update">头像更新失败啦</string>
    <string name="no_change">暂无修改</string>
    <string name="time_select">约定 %d 分钟内完成</string>
    <string name="update_get">正在获取更新...</string>
    <string name="download">点击下载</string>
    <string name="sys_name">麦田</string>
    <string name="is_debug">选中后显示推送TOAST</string>
    <string name="is_no_account">测试帐号登录</string>
    <string name="toast_unexpected_error">未知错误</string>
    <string name="toast_cannot_retrieve_selected_image">图片没找到哦</string>
    <string name="version_fail">版本检测失败了</string>
    <string name="version_new">已是最新版</string>
    <string name="min_before">%s分钟前</string>
    <string name="hour_before">%d小时前</string>
    <string name="unknown">未知</string>
    <string name="no_setting">未设置</string>

</resources>
