<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:background="@drawable/button_bg_white"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_gap_big"
        android:layout_marginLeft="@dimen/content_gap_big"
        android:text="@string/setting_remark"
        android:textColor="@color/textcolor_theme"
        android:textSize="@dimen/font_actionbar_title" />

    <EditText
        android:id="@+id/desc_et"
        android:layout_width="240dp"
        android:layout_height="@dimen/bottom_bt_height"
        android:layout_marginRight="@dimen/content_gap_big"
        android:layout_marginLeft="@dimen/content_gap_big"
        android:background="@null"
        android:paddingLeft="@dimen/content_gap_small"
        android:hint="@string/hint_name"
        android:textColor="@color/textcolor_theme"
        android:textColorHint="@color/gray_hint"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/font_actionbar_title" />

    <TextView
        android:id="@+id/change_ok"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="@dimen/bottom_bt_height"
        android:layout_marginTop="@dimen/content_10dp"
        android:layout_marginRight="@dimen/content_gap_big"
        android:layout_marginBottom="@dimen/content_gap_big"
        android:layout_marginLeft="@dimen/content_gap_big"
        android:background="@drawable/button_bg_pink"
        android:gravity="center"
        android:text="@string/change_ok"
        android:textColor="@color/white"
        android:textSize="@dimen/font_medium" />

</LinearLayout>

