<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setting_sys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_layout"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_toolbar"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/content_gap_big"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/exit_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/content_gap_big"
        android:background="@drawable/button_bg_match"
        android:text="@string/exit"
        android:textColor="@color/white"
        android:textSize="@dimen/font_btn" />

    <Button
        android:id="@+id/reset_password_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/content_gap_big"
        android:background="@drawable/button_bg_pink"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/font_btn" />

    <Button
        android:id="@+id/update_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/content_gap_big"
        android:background="@drawable/button_bg_theme"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/font_btn" />

    <Button
        android:id="@+id/api_state"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/content_gap_big"
        android:background="@drawable/button_bg_theme"
        android:textColor="@color/white"
        android:visibility="gone"
        android:textSize="@dimen/font_btn" />

    <TextView
        android:id="@+id/version_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/content_gap_big"
        android:textColor="@color/gray_hint"
        android:textSize="@dimen/font_btn" />

</LinearLayout>

