<?xml version="1.0" encoding="utf-8"?>
<com.mytian.lb.mview.ClipRevealFrame xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:visibility="invisible">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_item"
        android:clipChildren="false"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/content_gap"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_gap"
                android:layout_marginRight="@dimen/content_gap"
                android:background="@drawable/light_divide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_gap">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/hint_name"
                    android:textColor="@color/textcolor_222"
                    android:textSize="@dimen/font_btn" />

                <EditText
                    android:id="@+id/name_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@color/textcolor_222"
                    android:textColorHint="@color/gray_hint"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/font_btn" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_gap"
                android:layout_marginRight="@dimen/content_gap"
                android:background="@drawable/light_divide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_gap">

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/hint_phone"
                    android:textColor="@color/textcolor_222"
                    android:textSize="@dimen/font_btn" />

                <TextView
                    android:id="@+id/phone_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@color/gray_hint"
                    android:textSize="@dimen/font_btn" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_gap"
                android:layout_marginRight="@dimen/content_gap"
                android:background="@drawable/light_divide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_gap">

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/hint_birthday"
                    android:textColor="@color/textcolor_222"
                    android:textSize="@dimen/font_btn" />

                <TextView
                    android:id="@+id/birthday_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:singleLine="true"
                    android:textColor="@color/textcolor_222"
                    android:textColorHint="@color/gray_hint"
                    android:textSize="@dimen/font_btn" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_gap"
                android:layout_marginRight="@dimen/content_gap"
                android:background="@drawable/light_divide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/content_gap"
                    android:text="@string/hint_gender"
                    android:textColor="@color/textcolor_222"
                    android:textSize="@dimen/font_btn" />

                <com.rey.material.widget.RadioButton
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/woman_bt"
                    style="@style/RadioButtonDrawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="@dimen/content_gap"
                    android:layout_toLeftOf="@+id/man_bt"
                    android:checked="true"
                    android:gravity="center_vertical"
                    android:padding="@dimen/content_gap_small"
                    android:text="@string/woman"
                    android:textColor="@color/gray_hint"
                    android:textSize="@dimen/font_btn"
                    app:rbd_strokeColor="@color/match"/>

                <com.rey.material.widget.RadioButton
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/man_bt"
                    style="@style/RadioButtonDrawable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="@dimen/content_gap"
                    android:checked="false"
                    android:gravity="center_vertical"
                    android:padding="@dimen/content_gap_small"
                    android:text="@string/man"
                    android:textColor="@color/gray_hint"
                    android:textSize="@dimen/font_btn"
                    app:rbd_strokeColor="@color/match" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/content_gap"
                android:layout_marginRight="@dimen/content_gap"
                android:background="@drawable/light_divide" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_gap">

                <TextView
                    android:id="@+id/integral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/hint_integral"
                    android:textColor="@color/textcolor_222"
                    android:textSize="@dimen/font_btn" />

                <TextView
                    android:id="@+id/integral_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:text="0"
                    android:textColor="@color/gray_hint"
                    android:textSize="@dimen/font_btn" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</com.mytian.lb.mview.ClipRevealFrame>

